Changelog for Weeder

0.1
    Initial version