@@ -1,4 +1,5 @@
 Changelog for Weeder
 
+    #2, use "stack query" rather than parsing stack.yaml
 0.1
     Initial version
